# TCP-echo

./: .gitignore  CMakeLists.txt  README.md  client_script.sh
client/: CMakeLists.txt  client.c
server/: CMakeLists.txt  server.c
